==> Nelson9191/amazon-freertos/demos/espressif/esp32_devkitc_esp_wrover_kit/common/application_code/espressif_code/Mobus RTU/modbus.c <==
#include "modbus.h"
#include "stdio.h"
#include "string.h"
#include "FreeRTOS.h"
#include "task.h"
#include "uart.h"
#include "utils.h"
#define BUF_SIZE 2000
#define UART_NUM_1 1

void RCV_ON(void)                       //ESta Funcion va a ser la que habilita el serial y las interrupciones
{
        #if(MODBUS_SERIAL_INT_SOURCE!=MODBUS_INT_EXT)
                while(kbhit(MODBUS_SERIAL)) 
                {
                        getc();
                }  //Borra RX buffer. Borra interrupció RDA. Borra el flag del overrun error flag.

        #if(MODBUS_SERIAL_INT_SOURCE==MODBUS_INT_RDA)
                clear_interrupt(INT_RDA);            //Neteja interrupció RDA
        #else
                clear_interrupt(INT_RDA2);
        #endif
        #if(MODBUS_SERIAL_RX_ENABLE!=0) 
                output_low(MODBUS_SERIAL_RX_ENABLE);
        #endif
        #if(MODBUS_SERIAL_INT_SOURCE==MODBUS_INT_RDA)
                enable_interrupts(INT_RDA);
        #else
                enable_interrupts(INT_RDA2);
        #endif
        #else
                clear_interrupt(INT_EXT);
                ext_int_edge(H_TO_L);
                #if(MODBUS_SERIAL_RX_ENABLE!=0) 
                        output_low(MODBUS_SERIAL_RX_ENABLE);
                #endif
                enable_interrupts(INT_EXT);
        #endif
}

void modbus_init(void)   
{


        uart_param_config(UART_NUM_1, &uart_config);
        uart_set_pin(UART_NUM_1, ECHO_TEST_TXD, ECHO_TEST_RXD, MODBUS_SERIAL_ENABLE_PIN, ECHO_TEST_CTS);
        uart_driver_install(UART_NUM_1, BUF_SIZE*2, BUF_SIZE*2, 0, NULL, 0);
        gpio_handler_write(MODBUS_SERIAL_ENABLE_PIN,0);   //Possem a zero el Tcs del transreceptor
        Modbus_Task_Start();
       
       // RCV_ON();                               //crida aquesta funció per activar la recepció
       // setup_timer_2(T2_DIV_BY_16,249,5);      //Configuració del Timer 2 per interrupció ~4ms
        //enable_interrupts(GLOBAL);              //Permet les interrupcions globals
        
}

void modbus_enable_timeout(int enable)
{
        disable_interrupts(INT_TIMER2);   //Desabilita la interrupció del Timer 2
        if(enable) 
        {
                set_timer2(0);                 //Posa a 0 el Timer
                clear_interrupt(INT_TIMER2);   //Neteja la interrupció
                enable_interrupts(INT_TIMER2); //Torna a habilitar la int del timer 
        }
}

void modbus_serial_send_stop(void)
{
        int8_t crc_low, crc_high;
        crc_high=modbus_serial_crc.b[1];  //Guardem el valor del Checksum MSB
        crc_low=modbus_serial_crc.b[0];   //Guardem el valor del checksum LSB
        //Per defecte es calcula el CRC d'aquests dos valors però enviarem a la UART
        //directement el valor CRC high i low.
        modbus_serial_putc(crc_high);   // Enviem aquests valors a la UART 
        modbus_serial_putc(crc_low);
        #if(MODBUS_SERIAL_INT_SOURCE!=MODBUS_INT_EXT)
                WAIT_FOR_HW_BUFFER();
        #endif
        ets_delay_us(3500000/MODBUS_SERIAL_BAUD); //3.5 character delay
        RCV_ON();     //Activa la recepció
        #if(MODBUS_SERIAL_ENABLE_PIN!=0) 
                gpio_handler_write(MODBUS_SERIAL_ENABLE_PIN, 0);
        #endif
        modbus_serial_crc.d=0xFFFF;
}

void Modbus_init(void)
{





}
