==> slapenkov/hm4-fw/Src/modbus.c <==
#include "modbus.h"

void RCV_ON(void)
{
	//clear buffer if not empty

	while(__HAL_UART_GET_FLAG(&mbuart, UART_FLAG_RXNE) == SET)
	{
		__HAL_UART_FLUSH_DRREGISTER(&mbuart);
	};

	//clear USART interrupt
	__HAL_UART_CLEAR_FLAG(&mbuart, UART_FLAG_RXNE);

	//enable USART interrupt
	__HAL_UART_ENABLE_IT(&mbuart, UART_IT_RXNE);
}

void modbus_init(void){
	//uart hardware was previously init by main function

	//setup USART interrupt

#if (MODBUS_SWITCH==USART_1)
	HAL_NVIC_SetPriority(USART1_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(USART1_IRQn);

#elif (MODBUS_SWITCH==USART_2)
	HAL_NVIC_SetPriority(USART2_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(USART2_IRQn);

#elif (MODBUS_SWITCH==USART_3)
	HAL_NVIC_SetPriority(USART3_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(USART3_IRQn);

#endif

   //clear port and enable it's interrupt
	RCV_ON();

   //if rtu mode - setup timer and it's interrupts
#if (MODBUS_SERIAL_TYPE == MODBUS_RTU)
	//timer module set active in main

	//setup TIM7 interrupt
	HAL_NVIC_SetPriority(TIM7_IRQn, 1, 1);
	HAL_NVIC_EnableIRQ(TIM7_IRQn);


#endif
}

void modbus_enable_timeout(uint8_t enable)
{
   //disable timer interrupts
	__HAL_TIM_DISABLE_IT(&mbtim, TIM_IT_UPDATE);
   if (enable) {
      //reset counter
	   __HAL_TIM_SET_COUNTER(&mbtim, 0);
      //clear timer interrupt;
	   __HAL_TIM_CLEAR_IT(&mbtim, TIM_IT_UPDATE);
      //enable timer interrupts
	   __HAL_TIM_ENABLE_IT(&mbtim, TIM_IT_UPDATE);
   }
}

void modbus_serial_send_stop()
{
   #if (MODBUS_SERIAL_TYPE == MODBUS_ASCII)
      int8 i;
      
      for(i=0;i<8;i++)
      {
         if(bit_test(modbus_serial_lrc,i))
            bit_clear(modbus_serial_lrc,i);
         else
            bit_set(modbus_serial_lrc,i);
      }
      modbus_serial_lrc++;
      
      modbus_serial_putc(modbus_serial_lrc);
      fputc('\r',MODBUS_SERIAL);
      fputc('\n',MODBUS_SERIAL);
   #else
      uint8_t crc_low, crc_high;
   
      crc_high=modbus_serial_crc.b[1];
      crc_low=modbus_serial_crc.b[0];
   
      modbus_serial_putc(crc_high);
      modbus_serial_putc(crc_low);
   #endif
   
/*#if (MODBUS_SERIAL_INT_SOURCE!=MODBUS_INT_EXT)
   WAIT_FOR_HW_BUFFER();
#endif*/
   
   #if (MODBUS_SERIAL_TYPE == MODBUS_RTU)
      delay_us(3500000/MODBUS_SERIAL_BAUD); //3.5 character delay
   #endif

   RCV_ON();

#if (MODBUS_SERIAL_ENABLE_PIN!=0) 
   output_low(MODBUS_SERIAL_ENABLE_PIN);
#endif

   #if (MODBUS_SERIAL_TYPE == MODBUS_ASCII)
      modbus_serial_lrc=0;
   #else
      modbus_serial_crc.d=0xFFFF;
   #endif
}
